Paper surgery. Tell the patient that things are going to get worse before they get better.

--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -36,4 +36,7 @@ To generate attractive pattern colorings, a reasonable first step is to enforce 
 \label{fig:ColorCompatOnly}
 \end{figure}
 
+\remark{After pointing out the problems with the images, mention how some simple features (size of region, number of connected components) seem predictive of how colorful it should be. Call out a similar example for an adjacency feature. Mention that compatibility is still important(?) Our approach is to learn to predict these kinds of color properties given these kinds of pattern features, given a dataset of patterns. In the next sections, we'll first describe the dataset we use. Then we'll describe the unary functions we use to predict color properties of pattern regions (cite section), the binary functions we use to predict color properties of adjacent pattern regions (cite section), and our treatment of color compatibility (cite section). We'll then show how all of these different predictive functions can be combined into one unified probabilistic model through the framework of factor graphs. We can automatically tune the relative importance of each function in the model (cite section) and then sample from it to generate coloring suggestions for a given pattern (cite section).
+}
+
 Rather than develop a specialized algorithm for this problem, we exploit the insight that both of these concerns---color harmony and spatial consistency---can be encoded in the extremely general framework of probabilistic factor graphs. In the next sections, we develop a data-driven factor graph model that can be trained on example colored patterns and sampled to generate new coloring suggestions. The factor graph formalism allows us to leverage existing models of color compatibility, to plug in additional coloring constraints in response to available user input, and to capture and inspect the characteristics of desired styles through established machine learning techniques.
