--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -18,3 +18,5 @@ While there is little work directly addressing pattern colorization, researchers
 
 \paragraph{3D model colorization}
 Other recent work has tackled automatic coloring of 3D objects. The DressUp! system suggests plausible outfits---including colors for each clothing item---for virtual characters~\cite{DressUp}. It also employs the color compatibility function of O'Donovan et al.~\shortcite{ODonovan} as part of a probabilistic model, but it does not consider the spatiality of color beyond a top-to-bottom ordering. The Material Memex system models the context-dependent correlation between geometric shape and material properties of 3D object parts~\cite{MaterialMemex}. In a related fashion, the system presented in this paper models the context-dependent correlation between pattern regions and color properties of those regions. The Material Memex does not include any explicit consideration of color compatibility. Additionally, its use of multinomial factors requires a quantization of material configuration space. Since the Memex does not consider colors separately from materials, this quantization can greatly restrict the set of colors the model can possibly suggest. In contrast, our model uses continuous probability distributions.
+
+\remark{Add a short section on 'Content generation via probabilistic inference,' where we cite a bunch of folks (Paul, Jerry, etc.) but mostly refer to Yi-Ting's two papers.}
