--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -102,8 +102,9 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 
-%% Macros!!
+%% Macros and mathematical notation
 \input{macros.tex}
+\input{notation.tex}
 
 \begin{document}
 
@@ -155,6 +156,9 @@
 \input{background.tex}
 \input{approach.tex}
 \input{dataset.tex}
+\input{unary.tex}
+\input{binary.tex}
+\input{colorCompat.tex}
 \input{model.tex}
 \input{results.tex}
 \input{evaluation.tex}
