--- a/latex/siggraph2013/abstract.tex
+++ b/latex/siggraph2013/abstract.tex
@@ -1,2 +1,1 @@
-%We present a method for automatically coloring 2D patterns. Our method uses a probabilistic factor graph model that can be sampled to generate new coloring suggestions. 
-We present a probabilistic factor graph model for automatically coloring 2D patterns. The model is trained on example patterns to statistically capture the desirable stylistic properties of the inputs. Using Markov Chain Monte Carlo, the model can be sampled to generate a diverse set of attractive new colorings for a target pattern. This general probabilistic framework allows users to guide the generated suggestions via conditional inference or additional soft constraints. We demonstrate results on a variety of coloring tasks, and we evaluate the model through a perceptual study in which participants judged automatic colorings to be as desirable as hand-created ones.
+We present a probabilistic factor graph model for automatically coloring 2D patterns. The model is trained on example patterns to statistically capture their desirable stylistic properties. It incorporates terms for enforcing both color compatibility and spatial arrangements of colors that are consistent with the training examples. Using Markov Chain Monte Carlo, the model can be sampled to generate a diverse set of attractive new colorings for a target pattern. This general probabilistic framework allows users to guide the generated suggestions via conditional inference or additional soft constraints. We demonstrate results on a variety of coloring tasks, and we evaluate the model through a perceptual study in which participants judged automatic colorings to be as desirable as hand-created ones.
