--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -1,4 +1,4 @@
-\section{Binary Color Properties}
+\section{Binary Color Functions}
 \label{sec:binary}
 
 \remark{Introduction (why do we also need these terms?)}
