--- a/latex/siggraph2013/unary.tex
+++ b/latex/siggraph2013/unary.tex
@@ -1,4 +1,4 @@
-\section{Unary Color Properties}
+\section{Unary Color Functions}
 \label{sec:unary}
 
 \remark{Introduction (Why do we need these terms?)}
