Added lightness search figure draft. Not connected in text.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -78,6 +78,19 @@ Here, $\textrm{targetColor}(\group)$ is the desired color of group $\group$ and 
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
+{\includegraphics[width=.1785\columnwidth]{figs/brightness0Original}}&\includegraphics[width=.735\columnwidth]{figs/brightness0MMR}\vspace{0.5em}\\
+{\includegraphics[width=.1785\columnwidth]{figs/brightness1Original}}&\includegraphics[width=.735\columnwidth]{figs/brightness1MMR}\vspace{0.5em}\\
+%\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}%&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
+Original&Suggestions\\
+\end{tabular}
+
+\caption{TODO.}
+\label{fig:lightnessSearch}
+\vspace{-1.0em}
+\end{figure}
+
+\begin{figure}[ht]
+\begin{tabular}{cc}
 {\includegraphics[width=.1785\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.735\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
 {\includegraphics[width=.1785\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.735\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
 %\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}%&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
